Fix FAQs width on mobile

--- a/style/main.scss
+++ b/style/main.scss
@@ -127,6 +127,14 @@ body,html {
   padding-top: 15rem;
 }
 
+@media (max-width: 500px) {
+  .accordion {
+    width: 75%;
+    margin: 3rem;
+  }
+
+}
+
 @media (max-width: 992px) {
   .offcanvas {
     width: 250px !important;
